<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jonathansnidervirginmoney.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.jonathansnidervirginmoney.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.jonathansnidervirginmoney.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.jonathansnidervirginmoney.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_forgot_password"
            app:destination="@id/navigation_forgot_password" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_room_recycler_list"
            app:destination="@id/navigation_room_recycler_list" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_user_recycler_list"
            app:destination="@id/navigation_user_recycler_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.jonathansnidervirginmoney.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_forgot_password"
        android:name="com.example.jonathansnidervirginmoney.ui.forgotpassword.ForgotPasswordFragment"
        android:label="fragment_forgot_password"
        tools:layout="@layout/fragment_forgot_password" >
        <action
            android:id="@+id/action_navigation_forgot_password_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user_recycler_list"
        android:name="com.example.jonathansnidervirginmoney.ui.userlist.UserRecyclerListFragment"
        android:label="@string/user_list"
        tools:layout="@layout/fragment_user_recycler_list" >
        <action
            android:id="@+id/action_navigation_user_recycler_list_to_navigation_user_detail"
            app:destination="@id/navigation_user_detail" />
    </fragment>
    <fragment

        android:id="@+id/navigation_room_recycler_list"
        android:name="com.example.jonathansnidervirginmoney.ui.roomlist.RoomRecyclerListFragment"
        android:label="@string/title_room_list"
        tools:layout="@layout/fragment_room_recycler_list" />
    <fragment
        android:id="@+id/navigation_user_detail"
        android:name="com.example.jonathansnidervirginmoney.ui.userlist.UserDetailFragment"
        android:label="@string/title_user_detail"
        tools:layout="@layout/fragment_user_detail" >
        <action
            android:id="@+id/action_navigation_user_detail_to_navigation_user_recycler_list"
            app:destination="@id/navigation_user_recycler_list" />
    </fragment>
</navigation>