<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:strokeColor="@color/virgin_color"
        app:strokeWidth="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recycleViewImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dashboard_black_24dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/more_info_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recycleViewImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/user_first_name"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/first_name"
                    android:textStyle="bold"

                    app:autoSizeMinTextSize="15sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_last_name"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:text="@string/last_name"
                    android:textStyle="bold"

                    app:autoSizeMinTextSize="15sp"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_first_name" />
\
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/more_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_more_info"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/recycleViewImage"
                app:layout_constraintTop_toTopOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>